Added Blacklist helper util with search function

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "homepage": "https://github.com/reecebedding/RegionCommanderProxy",
   "dependencies": {
     "body-parser": "^1.12.2",
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "request": "^2.53.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
